# Concept-Production

./: .dockerignore  .env.example  .env.template  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EVE_NEOCOM_README.md  FEATURES.md  IMPLEMENTATION_SUMMARY.md  INSTALLATION.md  Makefile  README.md  SECURITY.md  app.py  config.py  docker-compose.yml  eve_neocom_app.py  pyproject.toml  quickstart.sh  requirements-dev.txt  requirements.txt  test_app.py
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml
AI_AR_Install_Optimization/: MERGE_INFO.md  README.md  add_critical_files.sh  download (2).html  download (3).html  download.html  quick_push.sh
apps/cv-service/: main.py  requirements.txt
apps/dashboards/: logistics_planner.py  requirements.txt  supervisor_dashboard.py
apps/device-io/: main.py  requirements.txt
apps/orchestrator-api/: Dockerfile  main.py  requirements.txt
assets/: DEMO_PLACEHOLDER.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  GETTING_STARTED.md  OPTIMIZATION_SUMMARY.md  README.md  SYSTEM_OVERVIEW.md  ai-ar-integration-summary.md  ai-assisted-workflows.md  archived-notes.md  roadmap.md
docs/adr/: 0001-initial-architecture.md  001-monorepo-structure.md  002-policy-based-access-control.md
docs/api/: orchestrator-api.md
docs/guides/: stardew-valley-recipe-learning-guide.md
docs/policies/: access-control.yaml
docs/sop/: qa-walkaround.yaml  torque-verification.yaml  window-decal-install.yaml
docs/ui-ux/: ar-hud-concepts.md  dashboard-design.md  tls-dashboard-design.md
eve_app/: __init__.py  config.py
eve_app/ai/: __init__.py  assistant.py
eve_app/api/: __init__.py  esi_client.py  zkillboard_client.py
scripts/: load_sample_data.py
tests/: README.md  __init__.py  test_app.py  test_sample.py
(+10 files in other folders)
